--- a/charts/whatlang-wasm/templates/deployment.yaml
+++ b/charts/whatlang-wasm/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - /
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
