--- a/charts/whatlang/Chart.yaml
+++ b/charts/whatlang/Chart.yaml
@@ -4,3 +4,6 @@ description: A Helm chart for a simple language detection web service
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+maintainers:
+- email: korvoj@users.noreply.github.com
+  name: korvoj
