--- a/charts/whatlang/values.yaml
+++ b/charts/whatlang/values.yaml
@@ -43,7 +43,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: usermanager-standard-knf.kubernetes.osm-wasm.local
+    - host: whatlang-standard-knf.kubernetes.osm-wasm.local
       paths:
         - path: /
           pathType: ImplementationSpecific
