Make deployments fail on purpose for ubuntu chart

--- a/charts/ubuntu/templates/pod.yaml
+++ b/charts/ubuntu/templates/pod.yaml
@@ -17,7 +17,7 @@ spec:
         exec:
           command:
           - cat
-          - /tmp/healthy
-        failureThreshold: 500
+          - /tmp/healthyNOT
+        failureThreshold: 100
         periodSeconds: 2
   restartPolicy: Always
