--- a/charts/ubuntu/values.yaml
+++ b/charts/ubuntu/values.yaml
@@ -7,3 +7,5 @@ image:
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+
+startupProbeFile: /tmp/healthy
