Make Ubuntu releases fail by default

--- a/charts/ubuntu/values.yaml
+++ b/charts/ubuntu/values.yaml
@@ -8,4 +8,4 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-startupProbeFile: /tmp/healthy
+startupProbeFile: /tmp/healthyNO
