handle replicas for otrs

--- a/charts/otrs/values.yaml
+++ b/charts/otrs/values.yaml
@@ -7,6 +7,7 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+replicaCount: 1
 
 serviceAccount:
   # Specifies whether a service account should be created
