--- a/charts/otrs/templates/deployment.yaml
+++ b/charts/otrs/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{- include "otrs.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.replicaCount }}
   strategy:
     type: Recreate
   selector:
